# CPP_MIPT

./: CMakeLists.txt
06/: CMakeLists.txt  calculator.cpp  test_in.txt  token.cpp  token.h  variable.cpp  variable.h
08/B_END/: code.cpp
10/: reverse_file_via_two_files.cpp
12/shape_primitives/: CMakeLists.txt
lib/vec/: vec2d.cpp  vec2d.h
